--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: linear-gradient(to bottom right,rgba(255, 208, 0, 0.246), rgba(0, 128, 0, 0.265));
   height: 100vh;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 header {
@@ -50,7 +51,7 @@ button {
 }
 
 #lista-tarefas {
-  width: 80%;
+  width: 50%;
   margin: auto;
   background-color: rgba(128, 128, 128, 0.185);
   padding: 20px;
@@ -59,22 +60,27 @@ button {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.667);
 }
 
+ol {
+  list-style: none;
+}
+
 li {
   margin: 3px;
   padding: 3px 10px;
-  background-color: rgba(128, 128, 128, 0.459);
+  background-color: rgba(128, 128, 128, 0.46);
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 footer {
   position: absolute;
   width: 50%;
-  right: 25%;
+  left: 23.5%;
   bottom: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap:100px;
+  gap:80px;
   background-color: rgba(128, 128, 128, 0.185);
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.667);
   padding: 20px;
@@ -95,6 +101,6 @@ footer div {
 }
 
 .completed {
-  text-decoration: 2px line-through solid black;
-  background-color: rgba(128, 128, 128, 0.459);
+  text-decoration: 2px line-through solid red;
+  background-color: rgba(128, 128, 128, 0.46);
 }
